Fix spacing info div
Adj gap 'communites' nav li

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -131,11 +131,14 @@ button:active {
 .nav>li {
     display: flex;
     align-items: center;
-    gap: 1.5em;
+    gap: 1.3em;
 }
 .nav>.current-page {
     font-weight: bold;
     gap: 3em;
+}
+.communities-li {
+    gap: 1.1em !important;
 }
 .current-page::after {
     content: "<-";
@@ -210,7 +213,9 @@ button:active {
 .updates-container::-webkit-scrollbar,
 .updates-container::-webkit-scrollbar-thumb,
 .updates-container::-webkit-scrollbar-track,
-.trending::-webkit-scrollbar {
+.trending-container::-webkit-scrollbar,
+.trending-container::-webkit-scrollbar-thumb,
+.trending-container::-webkit-scrollbar-track {
     display: none;
 }
 .info-div {
@@ -220,6 +225,9 @@ button:active {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr;
     gap: 1em;
+}
+.info-div>div>h3 {
+    text-align: center;
 }
 .updates-card,
 .trending-card {
@@ -588,11 +596,12 @@ form {
 
 
 .updates-container {
-    max-height: 30vh;
-    overflow: auto;
+    max-height: 33vh;
+    overflow-y: auto;
 }
-.trending {
-    overflow: auto;
+.trending-container {
+    height: 33vh;
+    overflow-y: auto;
 }
 .updates-card,
 .trending-card {
@@ -685,14 +694,32 @@ form {
     h2 {
         font-size: 1.2em;
     }
-
+    .page-container {
+        max-height: 100vh;
+        padding-bottom: 2.5em;
+    }
     .info-div {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 2em;
         padding: 0.5em;
     }
-    .info-div h3 {
-        font-size: 1em;
+    .info-div>* {
+        max-height: 50%;
     }
-    
+    .info-div h3 {
+        font-size: 1.2em;
+    }
+    .updates-container,
+    .trending-container {
+        display: grid;
+        grid-auto-rows: max-content;
+        gap: 0.5em;
+        font-size: 1.5em;
+        max-height: 100%;
+        overflow: auto;
+    }
     .name-link {
         font-size: 0.8em;
     }
@@ -740,13 +767,28 @@ form {
     }
     .project-grid {
         grid-template-columns: 1fr;
-        grid-auto-rows: 220px;
+        grid-auto-rows: max-content;
         gap: 1em;
     }
 
 }
 
 @media screen and (max-width: 600px) {
+    .main-content {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "projects"
+            "info";
+    }
+    .info-div {
+        margin: 1em;
+        grid-template-rows: 1fr 1fr;
+    }
+    .updates-card,
+    .trending-card {
+        height: 100%;
+        padding: 0.5em;
+    }
     .search-icon {
         width: 14px;
         height: 14px;
